--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Curriculum vitae]
-description: [Human Geography, spatial data sciences, Political geography]
+description: [Johan Desbonnet]
