--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [Curriculum vitae]
-description: [Johan Desbonnet]
+title: [Johan Desbonnet]
+description: [Curriculum vitae]
